Fixed filter text overflow

--- a/foxycon-frontend/src/app/widgets/filters/filter/filter.component.scss
+++ b/foxycon-frontend/src/app/widgets/filters/filter/filter.component.scss
@@ -1,7 +1,7 @@
 .filter-wrapper{
     display: grid;
-    grid-template-columns: repeat(2, minmax(200px, 1fr));
-    gap: 5px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
     max-width: 1fr;
     align-items: center;
     padding: 5px;
